<resources>
    <string name="app_name">TripTrack</string>
    <string name="intro_slide1_title">Welcome To TripTrack</string>
    <string name="intro_slide1_description">TripTrack helps you remember your trips, events and holidays.</string>
    <string name="intro_slide2_title">Save Media</string>
    <string name="intro_slide2_description">Save pictures from Google Photos, your Camera, Dropbox or any other storage.. Store voice memos and text. Add locations to all of them.</string>
    <string name="intro_slide3_title">Device access</string>
    <string name="intro_slide3_description">We need access to your location to save it alongside your media.</string>

    <string name="search_title">Search</string>
    <string name="search_hint">e.g. Barcelona</string>
    <string name="info_no_trips">You haven\'t created any trips yet. Tap + to add one.</string>

    <string name="activity_title_create_trip">Create A Trip</string>
    <string name="create_trip_ethint_name">Name</string>
    <string name="create_trip_dphint_startdate">Start Date</string>
    <string name="create_trip_dphint_enddate">End Date</string>
    <string name="create_trip_cphint_colorscheme">Color Scheme</string>
    <string name="create_trip_hint_tags">Tags</string>
    <string name="create_trip_hint_locations">Locations</string>
    <string name="create_trip_hint_searchlocations">Search for Places</string>
    <string name="create_trip_hint_tagsinput">Add Tags to this Trip</string>

    <string name="loading_trip">Loading Trip</string>
    <string name="trip_fab_menu_text_memo">Text Memo</string>
    <string name="trip_fab_menu_audio_memo">Audio Memo</string>
    <string name="trip_fab_menu_image">Images</string>
    <string name="trip_fab_menu_video">Video</string>
    <string name="trip_tab_text_feed">Feed</string>
    <string name="trip_tab_text_settings">Settings</string>
    <string name="trip_settings_title">Trip Settings</string>
    <string name="trip_settings_delete_title">Delete Trip</string>
    <string name="trip_settings_delete_infotext">CAUTION: If you delete a Trip, all its data except for Pictures and Videos on Google Photos will be lost.</string>
    <string name="trip_settings_delete_btn">delete Trip</string>
    <string name="trip_feed_emptyinfo">You haven\'t added any entries to this trip. Tap + to add one.</string>
    <string name="trip_feed_deleteentrydialog_title">Delete Entry</string>
    <string name="trip_feed_deleteentrydialog_message">Your about to delete this entry:\n</string>
    <string name="title_activity_search">Searching</string>
    <string name="trip_settings_save_changes">save changes</string>
    <string name="title_activity_add_text">Add Text Memo</string>
    <string name="title_activity_add_audio">Add Audio Memo</string>
    <string name="title_activity_add_image">Add Images</string>
    <string name="add_text_inputhint">Memo</string>
    <string name="add_entry_inputhinttitle">Title</string>
    <string name="save">save</string>
    <string name="add_entry_date_hint">Date</string>
    <string name="add_entry_pick_current_location">my location</string>
    <string name="add_entry_locationspanel_title">Location</string>
    <string name="trip_feed_tags_title">Tags</string>
    <string name="trip_feed_heading_feed">Feed</string>
</resources>
