<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.lulebe.vakation.ui.TripSettingsFragment">
    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <de.lulebe.vakation.ui.views.SkylineImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/skyline"
            android:scaleType="fitEnd"
            android:background="@color/sky"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/skyline"
            android:textColor="@android:color/white"
            android:text="@string/loading_trip"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:clipToPadding="false">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:contentPadding="16dp"
                    app:cardElevation="1dp"
                    android:clipToPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/trip_settings_title" />


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_trip_ethint_name">
                            <EditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.design.widget.TextInputLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/AppTheme.InputCaption"
                            android:text="@string/create_trip_dphint_startdate"/>
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/btn_edit_startdate"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="12dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_create_grey600_24dp"/>
                            <TextView
                                android:id="@+id/et_startdate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="64dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:paddingTop="12dp"
                                android:paddingBottom="12dp"/>
                        </FrameLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/AppTheme.InputCaption"
                            android:text="@string/create_trip_dphint_enddate"/>
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/btn_edit_enddate"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="12dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_create_grey600_24dp"/>
                            <TextView
                                android:id="@+id/et_enddate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="64dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:paddingTop="12dp"
                                android:paddingBottom="12dp"/>
                        </FrameLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/AppTheme.InputCaption"
                            android:text="@string/create_trip_cphint_colorscheme"/>
                        <com.nex3z.flowlayout.FlowLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:clipToPadding="false">
                            <de.lulebe.vakation.ui.views.ColorSchemeOptionView
                                android:id="@+id/colorpicker_forest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                android:elevation="2dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?selectableItemBackground"
                                app:primaryColor="@color/colorPrimaryForest"
                                app:accentColor="@color/colorAccentForest"
                                app:colorName="Forest"/>
                            <de.lulebe.vakation.ui.views.ColorSchemeOptionView
                                android:id="@+id/colorpicker_beach"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                android:elevation="2dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?selectableItemBackground"
                                app:primaryColor="@color/colorPrimaryBeach"
                                app:accentColor="@color/colorAccentBeach"
                                app:colorName="Beach"/>
                            <de.lulebe.vakation.ui.views.ColorSchemeOptionView
                                android:id="@+id/colorpicker_city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                android:elevation="2dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?selectableItemBackground"
                                app:primaryColor="@color/colorPrimaryCity"
                                app:accentColor="@color/colorAccentCity"
                                app:colorName="City"/>
                            <de.lulebe.vakation.ui.views.ColorSchemeOptionView
                                android:id="@+id/colorpicker_party"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                android:elevation="2dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?selectableItemBackground"
                                app:primaryColor="@color/colorPrimaryParty"
                                app:accentColor="@color/colorAccentParty"
                                app:colorName="Party"/>
                        </com.nex3z.flowlayout.FlowLayout>

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:backgroundTint="@android:color/holo_green_dark"
                            android:textColor="@android:color/white"
                            android:text="@string/trip_settings_save_changes"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="2dp"
                    app:contentPadding="16dp"
                    app:cardElevation="1dp"
                    android:clipToPadding="false">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/create_trip_hint_tags"/>
                    <me.gujun.android.taggroup.TagGroup
                        android:id="@+id/c_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="8dp"
                        app:atg_horizontalPadding="20dp"
                        app:atg_verticalPadding="10dp"
                        app:atg_textSize="16sp"
                        app:atg_isAppendMode="true"/>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:contentPadding="16dp"
                    app:cardElevation="1dp"
                    android:clipToPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/trip_settings_delete_title"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:text="@string/trip_settings_delete_infotext"/>

                        <Button
                            android:id="@+id/btn_delete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:backgroundTint="@android:color/holo_red_dark"
                            android:textColor="@android:color/white"
                            android:text="@string/trip_settings_delete_btn"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>



            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</FrameLayout>
