<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.lulebe.vakation.ui.AddTextActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="48dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/add_entry_inputhinttitle">
            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <FrameLayout
            android:id="@+id/contentview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/til_title"
            android:layout_above="@+id/tv_date_hint"/>
        <TextView
            android:id="@+id/tv_date_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:layout_above="@+id/btn_edit_date"
            android:theme="@style/AppTheme.InputCaption"
            android:text="@string/add_entry_date_hint"/>
        <ImageView
            android:id="@+id/btn_edit_date"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/tv_tags_hint"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_create_grey600_24dp"/>
        <TextView
            android:id="@+id/et_date"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/tv_tags_hint"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:id="@+id/tv_tags_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/c_tags"
            android:theme="@style/AppTheme.InputCaption"
            android:text="@string/create_trip_hint_tags"/>
        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/c_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            app:atg_horizontalPadding="20dp"
            app:atg_verticalPadding="10dp"
            app:atg_textSize="16sp"
            app:atg_isAppendMode="true"/>
    </RelativeLayout>

    <de.lulebe.vakation.ui.views.SlideUpPanel
        android:id="@+id/slideuppanel"
        android:layout_width="match_parent"
        android:layout_height="396dp"
        android:layout_gravity="bottom"
        android:elevation="8dp"
        android:background="@android:color/white"
        android:translationY="348dp">
        <TextView
            android:id="@+id/slideuppanel_dragger"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="64dp"
            android:paddingEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:gravity="center_vertical"
            android:text="@string/add_entry_locationspanel_title"/>
        <ImageView
            android:id="@+id/slideuppanel_openbtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_drop_up_grey600_24dp"/>
        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="300dp"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />
        <fragment
            android:id="@+id/gmap"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom"
            android:name="com.google.android.gms.maps.MapFragment" />

        <Button
            android:id="@+id/btn_pickcurloc"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:background="@android:color/white"
            android:textColor="?attr/colorAccent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/add_entry_pick_current_location"/>

    </de.lulebe.vakation.ui.views.SlideUpPanel>

</android.support.design.widget.CoordinatorLayout>
